# fh6-goliath-coach

./: .gitignore  CODEX_INSTRUCTIONS.md  README.md  TASKS.md  pyproject.toml
backend/fh6_goliath_coach.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
backend/goliath/: __init__.py  cli.py
backend/goliath/config/: __init__.py  sections.py
backend/goliath/metadata/: __init__.py  vehicle_tune.py
backend/goliath/reference/: __init__.py  exporter.py  loader.py  model.py
backend/goliath/sessions/: __init__.py  discovery.py  managed.py  model.py  state.py  trash.py
backend/goliath/telemetry/: __init__.py  attempt.py  importer.py  lap.py  markers.py  model.py  (+4 more)
docs/: coordinate-system.md  telemetry-format.md  vehicle-tune-metadata.md
tests/: test_local_web.py  test_reference_elevation.py  test_reference_loader.py  test_restart_aware_lap.py  test_rewind_analysis.py  test_sections.py  test_session_discovery.py  test_telemetry_b1.py  test_vehicle_catalog.py  test_vehicle_tune_metadata.py
viewer/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
viewer/scripts/: camera-lifecycle-smoke.mjs  camera-orientation-smoke.mjs  map-display-mode-smoke.mjs  practice-focus-smoke.mjs  relative-elevation-smoke.mjs  render-coordinate-smoke.mjs  rewind-selection-smoke.mjs  section-focus-camera-smoke.mjs  session-api-smoke.mjs  smoke-test.mjs  telemetry-chart-smoke.mjs  telemetry-lap-smoke.mjs  test.mjs  ui-text-smoke.mjs  vehicle-autofill-smoke.mjs  vehicle-identity-smoke.mjs  vehicle-tune-schema-smoke.mjs  vehicle-tune-smoke.mjs
viewer/src/: App.tsx  styles.css
(+31 files in other folders)
